--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-tmp/*
-[Cc]onfig/core.php
-[Cc]onfig/database.php
-app/tmp/*
-app/[Cc]onfig/core.php
-app/[Cc]onfig/database.php
+secondview/tmp/*
+secondview/[Cc]onfig/core.php
+secondview/[Cc]onfig/database.php
+secondview/app/tmp/*
+secondview/app/[Cc]onfig/core.php
+secondview/app/[Cc]onfig/database.php
 !empty
 .DS_STORE
+secondview/app/webroot/photo/*
